--- a/hackathonProject.client/assets/style/style.css
+++ b/hackathonProject.client/assets/style/style.css
@@ -54,8 +54,20 @@ body {
     margin: 50px;
 }
 
+.addCommentButton {
+    width: 80px;
+    height: 80px;
+    background-color: var(--blue);
+}
+
 .dog-card:hover {
     cursor: pointer;
+}
+
+.profilePic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 /* UTILITY CLASSES */
